--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -47,4 +47,12 @@
         android:src="@mipmap/arrow_left"
         android:layout_gravity="left|bottom" />
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp" />
+
 </FrameLayout>
